# raspi-pico-rs-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config
cmake/: CMakeLists.txt  entry.c
src/: lib.rs
